# 2048-Game-Rust

./: Cargo.toml  README.md  index.html  style.css
front-2048/: index.html  style.css
src/: main.rs
