[package]
name = "game_rust_2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = { version="0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3"
rand = { version = "0.8.5"}
getrandom = { version = "0.2", features = ["js"] }
winit = { version = "0.28.1" }

[dependencies.web-sys]
version = "0.3.58"
features = [
    "console"
    ]